Renamed project to ChargeNear in code and title

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>EV Charger Map</title>
+    <title>ChargeNear - EV Charger Map</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Find Nearby EV Chargers</h1>
+    <h1>ChargeNear - Find Nearby EV Chargers</h1>
     <div class="controls">
         <input type="text" id="address" placeholder="Enter property address">
         <select id="distance">
