Added address autocomplete and mobile debugging logs

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <label><input type="checkbox" id="fastOnly"> Fast Chargers Only</label>
         <button onclick="showChargers()">Show Chargers</button>
     </div>
+    <div id="loading" class="loading">Loading chargers...</div>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="script.js"></script>
 </body>
