--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="map"></div>
-    <div class="controls">
+    <div id="map-container">
+        <div id="map"></div>
+    </div>
+    <div id="controls-container">
         <input type="text" id="address" placeholder="Enter property address">
         <select id="distance">
             <option value="0.5">Walking (0.5 miles)</option>
