--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     </div>
     <div id="loading">Loading...</div>
     <div id="map"></div>
+    <div style="position: absolute; top: 0; left: 0; right: 0; background: #21759B; color: white; text-align: center; padding: 10px; font-size: 18px;">
+        ChargeNear - Find EV Chargers Near You
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
