--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         window.addEventListener('load', updateHeaderHeight);
         window.addEventListener('resize', updateHeaderHeight);
     </script>
-    <script src="config.js"></script> <!-- Load config.js before script.js -->
-    <script src="script.js"></script>
+<script defer src="config.js"></script> <!-- Added defer -->
+<script defer src="script.js"></script> <
 </body>
 </html>
