--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             left: 0;
             right: 0;
             background-color: #00355F;
-            padding: 1.25rem 0.75rem;
+            padding: 0.75rem;
             z-index: 1000;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
@@ -31,7 +31,10 @@
         .header-content {
             max-width: 1000px;
             margin: 0 auto;
-            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 10px;
         }
 
         .header-content h1 {
@@ -40,6 +43,39 @@
             font-weight: bold;
             color: #EEC218;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            flex: 1;
+            text-align: center;
+        }
+
+        .search-container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            flex: 2;
+        }
+
+        .search-container input[type="text"] {
+            padding: 5px;
+            font-size: 14px;
+            width: 100%;
+            max-width: 300px;
+            border: none;
+            border-radius: 3px;
+        }
+
+        .search-container input[type="text"]::placeholder {
+            color: #d3d3d3; /* Light gray */
+            opacity: 1; /* Ensure full opacity for visibility */
+        }
+
+        .search-container button {
+            padding: 5px 10px;
+            font-size: 14px;
+            background-color: #EEC218;
+            color: #00355F;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
         }
 
         #map { 
@@ -64,18 +100,19 @@
             gap: 10px; 
         }
 
-        #controls input[type="text"], 
         #controls select, 
-        #controls button {
-            padding: 5px;
+        #controls label {
             font-size: 14px;
+        }
+
+        #controls select {
+            padding: 5px;
         }
 
         #controls label {
             display: flex;
             align-items: center;
             gap: 5px;
-            font-size: 14px;
         }
 
         #loading { 
@@ -93,11 +130,30 @@
 
         @media (max-width: 768px) {
             .header {
-                padding: 0.75rem 0.5rem;
+                padding: 0.5rem;
+            }
+
+            .header-content {
+                flex-direction: column;
+                gap: 8px;
             }
 
             .header-content h1 {
                 font-size: 1.25rem;
+                text-align: center;
+            }
+
+            .search-container {
+                width: 100%;
+                justify-content: center;
+            }
+
+            .search-container input[type="text"] {
+                max-width: 100%;
+            }
+
+            .search-container button {
+                display: none; /* Hide the Search button on mobile */
             }
 
             #controls {
@@ -108,9 +164,7 @@
                 gap: 8px;
             }
 
-            #controls input[type="text"], 
-            #controls select, 
-            #controls button {
+            #controls select {
                 width: 100%;
                 box-sizing: border-box;
             }
@@ -125,6 +179,11 @@
                 font-size: 1rem;
             }
 
+            .search-container input[type="text"] {
+                font-size: 12px;
+                padding: 4px;
+            }
+
             #controls {
                 padding: 8px;
             }
@@ -134,11 +193,14 @@
 <body>
     <div class="header" id="header">
         <div class="header-content">
-            <h1>ChargeNear - Find EV Chargers Near You</h1>
+            <h1>ChargeNear - Find an EV Charger Near You</h1>
+            <div class="search-container">
+                <input type="text" id="address" placeholder="Search here">
+                <button onclick="showChargers()">Search</button>
+            </div>
         </div>
     </div>
     <div id="controls">
-        <input type="text" id="address" placeholder="Enter address">
         <select id="distance">
             <option value="1">1 mile</option>
             <option value="5" selected>5 miles</option>
@@ -147,7 +209,6 @@
             <option value="20">20 miles</option>
         </select>
         <label><input type="checkbox" id="fastOnly"> Fast chargers only</label>
-        <button onclick="showChargers()">Search</button>
     </div>
     <div id="loading">Loading...</div>
     <div id="map"></div>
@@ -161,8 +222,17 @@
 
         window.addEventListener('load', updateHeaderHeight);
         window.addEventListener('resize', updateHeaderHeight);
+
+        // Search on Enter key press
+        const addressInput = document.getElementById('address');
+        addressInput.addEventListener('keypress', (event) => {
+            if (event.key === 'Enter') {
+                event.preventDefault(); // Prevent form submission if inside a form
+                showChargers();
+            }
+        });
     </script>
-<script defer src="config.js"></script> <!-- Added defer -->
-<script defer src="script.js"></script> <
+    <script defer src="config.js"></script>
+    <script defer src="script.js"></script>
 </body>
 </html>
