--- a/index.html
+++ b/index.html
@@ -256,6 +256,12 @@
     <script type="module" src="js/mapUtils.js"></script>
     <script type="module" src="js/location.js"></script>
     <script type="module" src="js/ui.js"></script>
+    <script type="module" src="js/api.js"></script> <!-- Add this line -->
+    <script defer src="js/config.js"></script>
+    <script type="module" src="js/script.js"></script>
+    <script type="module" src="js/mapUtils.js"></script>
+    <script type="module" src="js/location.js"></script>
+    <script type="module" src="js/ui.js"></script>
     <script type="module" src="js/api.js"></script>
 </body>
 </html>
