default location to nearby

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <div id="controls">
         <select id="distance">
             <option value="0.25" selected>Nearby</option>
-            <option value="1" selected>1 mile</option>
+            <option value="1">1 mile</option>
             <option value="5">5 miles</option>
             <option value="10">10 miles</option>
             <option value="15">15 miles</option>
