--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
     </div>
     <div id="controls">
         <select id="distance">
-            <option value="0.25" selected>Near Me</option>
-            <option value="1">1 mile</option>
+            <option value="0.25">Near Me</option>
+            <option value="1" selected>1 mile</option>
             <option value="5">5 miles</option>
             <option value="10">10 miles</option>
             <option value="15">15 miles</option>
