Add Tesla Supercharger and Destination Charger filters, improve charger type detection

--- a/index.html
+++ b/index.html
@@ -259,6 +259,9 @@
     </div>
     <div id="controls">
         <label><input type="checkbox" id="fastOnly"> Fast chargers only</label>
+        <label><input type="checkbox" id="teslaSupercharger"> Tesla Superchargers</label>
+        <label><input type="checkbox" id="teslaDestination"> Tesla Destination</label>
+        <label><input type="checkbox" id="chargepointOnly"> ChargePoint</label>
     </div>
     <div id="map"></div>
     <div id="loading">Loading...</div>
