--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ChargeNear</title>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style> 
             :root {
             --header-height: 71px;
@@ -93,14 +94,16 @@
         #controls { 
             position: absolute; 
             top: calc(var(--header-height) + 10px); 
-            left: 10px; 
+            right: 50px; /* Move left of the zoom controls */
             z-index: 2; /* Above map */
             background: white; 
             padding: 10px; 
             border-radius: 5px; 
             box-shadow: 0 0 5px rgba(0,0,0,0.3); 
             display: flex; 
+            flex-direction: column; /* Stack controls vertically */
             gap: 10px; 
+            margin-top: 0; /* Remove the margin since we're positioning it directly under the banner */
         }
 
         #controls select, 
@@ -163,12 +166,12 @@
 
             #controls {
                 top: calc(var(--header-height) + 5px);
-                left: 5px;
-                right: auto; /* Remove spanning across the screen */
-                width: 150px; /* Narrower width */
-                flex-direction: column; /* Stack vertically */
+                right: 50px; /* Keep consistent with desktop */
+                width: auto;
+                flex-direction: column;
                 gap: 8px;
-                padding: 15px; /* Thicker padding */
+                padding: 10px;
+                margin-top: 0; /* Remove margin for mobile too */
             }
 
             #controls select {
@@ -245,6 +248,115 @@
             background-color: #EEC218;
             color: black;
         }
+        /* Filter Button Styles */
+        .filter-button {
+            background: white;
+            border: none;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            transition: all 0.3s ease;
+            color: #00355F;
+            margin: 0;
+        }
+
+        .filter-button:hover {
+            background: #f0f0f0;
+            transform: scale(1.05);
+        }
+
+        .filter-button i {
+            font-size: 1rem;
+        }
+
+        /* Filter Modal Styles */
+        .filter-modal-content {
+            max-width: 500px;
+            width: 90%;
+            max-height: 80vh;
+            overflow-y: auto;
+        }
+
+        .modal-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-bottom: 15px;
+            border-bottom: 1px solid #eee;
+        }
+
+        .modal-header h2 {
+            margin: 0;
+            font-size: 1.5rem;
+            color: #333;
+        }
+
+        .close-button {
+            background: none;
+            border: none;
+            font-size: 24px;
+            cursor: pointer;
+            color: #666;
+        }
+
+        .filter-sections {
+            padding: 20px 0;
+        }
+
+        .filter-section {
+            margin-bottom: 20px;
+        }
+
+        .filter-section h3 {
+            margin: 0 0 10px 0;
+            font-size: 1.1rem;
+            color: #444;
+        }
+
+        .filter-section label {
+            display: block;
+            margin: 8px 0;
+            color: #666;
+        }
+
+        .modal-footer {
+            padding-top: 15px;
+            border-top: 1px solid #eee;
+            display: flex;
+            gap: 10px;
+            justify-content: flex-end;
+        }
+
+        .primary-button {
+            background: #00355F;
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .secondary-button {
+            background: #f0f0f0;
+            color: #333;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .primary-button:hover {
+            background: #002a4a;
+        }
+
+        .secondary-button:hover {
+            background: #e0e0e0;
+        }
     </style>
 </head>
 <body>
@@ -258,11 +370,62 @@
         </div>
     </div>
     <div id="controls">
-        <label><input type="checkbox" id="fastOnly"> Fast chargers only</label>
-        <label><input type="checkbox" id="teslaSupercharger"> Tesla Superchargers</label>
-        <label><input type="checkbox" id="teslaDestination"> Tesla Destination</label>
-        <label><input type="checkbox" id="chargepointOnly"> ChargePoint</label>
+        <button id="filter-button" class="filter-button" title="Show Filters">
+            <i class="fas fa-filter"></i>
+        </button>
     </div>
+
+    <!-- Filter Modal -->
+    <div id="filter-modal" class="modal">
+        <div class="modal-content filter-modal-content">
+            <div class="modal-header">
+                <h2><i class="fas fa-filter"></i> Filter Chargers</h2>
+                <button class="close-button">&times;</button>
+            </div>
+            <div class="filter-sections">
+                <div class="filter-section">
+                    <h3><i class="fas fa-bolt"></i> Charger Types</h3>
+                    <label><input type="checkbox" id="fastOnly"> Fast chargers only (Level 3)</label>
+                    <label><input type="checkbox" id="level2Only"> Level 2 chargers</label>
+                </div>
+
+                <div class="filter-section">
+                    <h3><i class="fas fa-car"></i> Tesla Chargers</h3>
+                    <label><input type="checkbox" id="teslaSupercharger"> Tesla Superchargers</label>
+                    <label><input type="checkbox" id="teslaDestination"> Tesla Destination</label>
+                </div>
+
+                <div class="filter-section">
+                    <h3><i class="fas fa-network-wired"></i> Network Providers</h3>
+                    <label><input type="checkbox" id="chargepointOnly"> ChargePoint</label>
+                    <label><input type="checkbox" id="electrifyAmerica"> Electrify America</label>
+                    <label><input type="checkbox" id="evgo"> EVgo</label>
+                    <label><input type="checkbox" id="blink"> Blink</label>
+                </div>
+
+                <div class="filter-section">
+                    <h3><i class="fas fa-check-circle"></i> Charger Status</h3>
+                    <label><input type="checkbox" id="operationalOnly" checked> Operational only</label>
+                </div>
+
+                <div class="filter-section">
+                    <h3><i class="fas fa-tachometer-alt"></i> Power Output</h3>
+                    <label><input type="checkbox" id="highPower"> High power (150kW+)</label>
+                    <label><input type="checkbox" id="mediumPower"> Medium power (50-150kW)</label>
+                    <label><input type="checkbox" id="lowPower"> Low power (<50kW)</label>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button id="apply-filters" class="primary-button">
+                    <i class="fas fa-check"></i> Apply Filters
+                </button>
+                <button id="reset-filters" class="secondary-button">
+                    <i class="fas fa-undo"></i> Reset
+                </button>
+            </div>
+        </div>
+    </div>
+
     <div id="map"></div>
     <div id="loading">Loading...</div>
     <div id="location-error-modal" class="modal">
